force-app/main/default/objects/Assessment__c/fields/Assessment_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Issued_Date__c</fullName>
    <label>Issued Date (or expected)</label>
    <type>Date</type>
</CustomField>