force-app/main/default/objects/Assessment__c/fields/English_Level_Score__c.field-meta.xml
<CustomField>
    <fullName>English_Level_Score__c</fullName>
    <label>English Level Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- None -</fullName>
                <default>true</default>
                <label>- None -</label>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B2+</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>