force-app/main/default/objects/Assessment__c/fields/English_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>English_Test_Date__c</fullName>
    <label>English Test Date</label>
    <type>Date</type>
</CustomField>