force-app/main/default/objects/Assessment__c/fields/English_Test_has_been_booked__c.field-meta.xml
<CustomField>
    <fullName>English_Test_has_been_booked__c</fullName>
    <label>English Test has been booked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>