force-app/main/default/objects/Assessment__c/fields/FOF_Password__c.field-meta.xml
<CustomField>
    <fullName>FOF_Password__c</fullName>
    <label>FOF Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>