force-app/main/default/objects/Assessment__c/fields/FOF_Practice_Tests_Score__c.field-meta.xml
<CustomField>
    <fullName>FOF_Practice_Tests_Score__c</fullName>
    <label>FOF Practice Tests Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>