force-app/main/default/objects/Assessment__c/fields/FOF_Username__c.field-meta.xml
<CustomField>
    <fullName>FOF_Username__c</fullName>
    <label>FOF Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>