force-app/main/default/objects/Assessment__c/fields/Interview_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_Time__c</fullName>
    <label>Interview Date/Time</label>
    <type>DateTime</type>
</CustomField>