force-app/main/default/objects/Assessment__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <label>Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>