force-app/main/default/objects/Assessment__c/fields/Score_Status__c.field-meta.xml
<CustomField>
    <fullName>Score_Status__c</fullName>
    <label>Score Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>