force-app/main/default/objects/Assessment__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Psychometrics Test</fullName>
            </value>
            <value>
                <fullName>EAX English Test</fullName>
            </value>
            <value>
                <fullName>FOF_Study_Guides</fullName>
                <label>FOF Study Guides</label>
            </value>
            <value>
                <fullName>FOF Practice Exams</fullName>
            </value>
            <value>
                <fullName>Mock Test</fullName>
            </value>
            <value>
                <fullName>Salesforce_Certification_Exam</fullName>
                <label>Salesforce Certification Exam</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>