force-app/main/default/objects/Assessment__c/fields/Trailhead_Points__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Points__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>