force-app/main/default/objects/Assessment__c/recordTypes/EAX_English_Test.recordType-meta.xml
<RecordType>
    <fullName>EAX_English_Test</fullName>
    <active>true</active>
    <label>EAX English Test</label>
</RecordType>