force-app/main/default/objects/Assessment__c/recordTypes/FOF_Practice_Exams.recordType-meta.xml
<RecordType>
    <fullName>FOF_Practice_Exams</fullName>
    <active>true</active>
    <label>FOF Practice Exams</label>
</RecordType>