force-app/main/default/objects/Assessment__c/recordTypes/FOF_Study_Guides.recordType-meta.xml
<RecordType>
    <fullName>FOF_Study_Guides</fullName>
    <active>true</active>
    <label>FOF Study Guides</label>
</RecordType>