force-app/main/default/objects/Assessment__c/recordTypes/Interview.recordType-meta.xml
<RecordType>
    <fullName>Interview</fullName>
    <active>true</active>
    <label>Interview</label>
</RecordType>