force-app/main/default/objects/Assessment__c/recordTypes/Mock_Test.recordType-meta.xml
<RecordType>
    <fullName>Mock_Test</fullName>
    <active>true</active>
    <label>Mock Test</label>
</RecordType>