force-app/main/default/objects/Assessment__c/recordTypes/Psychometric_Tests.recordType-meta.xml
<RecordType>
    <fullName>Psychometric_Tests</fullName>
    <active>true</active>
    <label>Psychometric Tests</label>
</RecordType>