force-app/main/default/objects/Assessment__c/recordTypes/Salesforce_Certification_Exam.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Certification_Exam</fullName>
    <active>true</active>
    <label>Salesforce Certification Exam</label>
</RecordType>